--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-hosts",
+  "name": "@futpib/simple-hosts",
   "version": "1.2.2",
   "description": "Simple functions to manipulate hosts contents",
   "main": "build/index.js",
